src-tauri/cargo_check_err_utf8.log
    Checking mdownloader v0.2.0 (D:\WorkStation\IDM\src-tauri)
error[E0433]: failed to resolve: use of undeclared type `Duration`
  --> src\engine\grabber.rs:64:22
   |
64 |             .timeout(Duration::from_secs(5))
   |                      ^^^^^^^^ use of undeclared type `Duration`
   |
help: consider importing one of these items
   |
 1 + use std::time::Duration;
   |
 1 + use chrono::Duration;
   |
 1 + use tokio::time::Duration;
   |
System.Management.Automation.RemoteException
warning: unused import: `windows_sys::Win32::System::IO::DeviceIoControl`
  --> src\engine\sniffing\handle.rs:10:5
   |
10 | use windows_sys::Win32::System::IO::DeviceIoControl;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
warning: unused doc comment
 --> src\engine\sniffing\orchestrator.rs:9:1
  |
9 | /// Global cache to prevent duplicate HUD triggers within a window.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rustdoc does not generate documentation for macro invocations
  |
  = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion
  = note: `#[warn(unused_doc_comments)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
warning: unused import: `std::collections::HashMap`
 --> src\engine\sniffing\orchestrator.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
System.Management.Automation.RemoteException
warning: unused import: `Manager`
 --> src\engine\sniffing\orchestrator.rs:3:24
  |
3 | use tauri::{AppHandle, Manager, Emitter};
  |                        ^^^^^^^
System.Management.Automation.RemoteException
warning: unused import: `tokio::sync::Mutex`
 --> src\engine\grabber.rs:3:5
  |
3 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^
System.Management.Automation.RemoteException
warning: unused variable: `width`
   --> src\engine\media.rs:138:25
    |
138 |                     let width = rep.attribute("width").and_then(|w| w.parse::<u32>().ok());
    |                         ^^^^^ help: if this is intentional, prefix it with an underscore: `_width`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
warning: unused variable: `height`
   --> src\engine\media.rs:139:25
    |
139 |                     let height = rep.attribute("height").and_then(|h| h.parse::<u32>().ok());
    |                         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_height`
System.Management.Automation.RemoteException
warning: unused variable: `id`
   --> src\engine\media.rs:238:25
    |
238 |                     let id = rep.attribute("id").unwrap_or("unknown");
    |                         ^^ help: if this is intentional, prefix it with an underscore: `_id`
System.Management.Automation.RemoteException
For more information about this error, try `rustc --explain E0433`.
warning: `mdownloader` (lib) generated 8 warnings
error: could not compile `mdownloader` (lib) due to 1 previous error; 8 warnings emitted
